--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "firebase": ">= 5.5.7 <8",
     "qrcode-generator": "^1.4.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-    "firebase": ">= 5.5.7 <8"
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
+    "bootstrap": "^4.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
