--- a/angular.json
+++ b/angular.json
@@ -67,8 +67,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "bitprint:build",
-            "proxyConfig": "proxy.conf.json"
+            "browserTarget": "bitprint:build"
           },
           "configurations": {
             "production": {
