--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "@angular/core": "~8.2.14",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "bootstrap": "^4.0.0",
     "firebase": ">= 5.5.7 <8",
     "qrcode-generator": "^1.4.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
-    "bootstrap": "^4.0.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
