--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
-              {
-                "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
-              }
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
