Added build script to package.json

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "bitprint/dist/bitprint",
+    "public": "dist/bitprint",
     "ignore": [
       "firebase.json",
       "**/.*",
