--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,6 @@ jobs:
     - run: npm run build:prod
     - uses: w9jds/firebase-action@master
       with:
-        args: deploy --only hosting
+        args: deploy
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
