--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
     "coinbase-commerce-node": "^1.0.4",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.6.2",
+    "node-fetch": "^2.6.0",
     "stripe": "^8.55.0"
   },
   "devDependencies": {
