--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.5.0",
     "firebase": ">= 5.5.7 <8",
+    "pdfkit": "^0.11.0",
     "qrcode-generator": "^1.4.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
